--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.3.6",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
