--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "nomp-server",
   "version": "1.0.0",
   "description": "Express backend for Nomp",
   "main": "server.js",
