--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
